--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ h1 {
 
 .image-container {
   position: relative;
+  max-height: 100vh;
 }
 
 .gradient-overlay {
@@ -152,8 +153,8 @@ h1 {
   z-index: 1;
 
   .carouseol-logo {
-    width: 119px;
-    height: 113px;
+    width: 100%;
+    height: 100%;
     margin-right: 10px;
   }
   .h5 {
