--- a/style.css
+++ b/style.css
@@ -32,6 +32,21 @@ h1 {
   }
 }
 
+.section-title {
+  background-size: 200% 100%;
+  background-image: linear-gradient(to right, #fc6100 50%, #045e61 50%);
+  background-position: 100% 0;
+  padding: 2PX 10px;
+  color: #ffffff;
+  transition: background-position 0.5s ease-in;
+}
+
+section:hover .section-title {
+  background-position: 0 0;
+  color: white;
+
+}
+
 /* -----------NAVBAR------------- */
 .header {
   color: #ffffff;
@@ -111,7 +126,6 @@ h1 {
 
 .carousel-inner {
   position: relative;
-
   display: flex;
   align-items: center;
 }
@@ -119,7 +133,7 @@ h1 {
 .carousel:hover .carouesl-img {
   margin: 0 auto;
   max-height: 100%;
-  /* animation: moveUpDown 5s ease infinite alternate; */
+
 }
 
 /* Define the vertical movement animation */
@@ -374,7 +388,7 @@ h1 {
 
 .management-box {
 
-  background-image: linear-gradient(#000000a8, #00151ade), url(assets/colorful-collage-fruits-texture-close-up.jpg);
+  background-image: linear-gradient(#000000c5, #011745de), url(assets/colorful-collage-fruits-texture-close-up.jpg);
   background-size: cover;
   background-attachment: fixed;
 
@@ -820,5 +834,67 @@ h1 {
   .text-div .h2:hover {
     background-color: var(--color1);
     /* display: inline; */
+  }
+}
+
+
+/* Distrivution */
+.distribution-item {
+  box-shadow: 0 0 45px rgba(0, 0, 0, .08);
+}
+
+.distribution-item img {
+  transition: .5s;
+}
+
+.distribution-item:hover img {
+  transform: scale(1.1);
+}
+
+.distribution-item .distribution-social {
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: 50%;
+  left: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(22, 22, 22, .7);
+  opacity: 0;
+  transition: .5s;
+}
+
+.distribution-item:hover .distribution-social {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 1;
+}
+
+/* Service */
+.service-row {
+  box-shadow: 0 0 45px rgba(0, 0, 0, .08);
+}
+
+.service-item {
+  border-color: rgba(0, 0, 0, .03) !important;
+  transition: .2s ease-in;
+  overflow: hidden;
+
+  .btn-square {
+    transition: .2s ease-in;
+  }
+}
+
+
+
+.service-item:hover {
+  background-color: rgb(255, 140, 0);
+  color: #eceff1;
+
+  .btn-square {
+    transform: scale(1.2);
   }
 }
