--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@ p {
     color: var(--color2);
     font-size: 40px;
   }
+
+  .whatsapp {
+    color: var(--color1);
+  }
 }
 
 .section-title {
@@ -403,12 +407,6 @@ section:hover .section-title {
   } */
 
 
-  .testimonial {
-    border-left: 3px solid#ffffff;
-    padding: 70px 0 70px 228px;
-    position: relative;
-    margin-top: 25px;
-  }
 
   .testimonial:before,
   .testimonial:after {
@@ -431,11 +429,17 @@ section:hover .section-title {
   }
 
   .testimonial {
+    border-left: 3px solid#ffffff;
+    padding: 70px 0 70px 228px;
+    position: relative;
+    margin-top: 25px;
+
+
     .pic {
       width: 149px;
       height: 149px;
       position: absolute;
-      top: 134px;
+      top: 30%;
       left: 50px;
     }
 
@@ -486,6 +490,28 @@ section:hover .section-title {
   }
 }
 
+@media (max-width:468px) {
+  .testimonial {
+    display: flex !important;
+    flex-direction: column !important;
+    padding: 10px !important;
+    justify-content: center !important;
+
+    .pic {
+      position: relative !important;
+      top: unset !important;
+      left: unset !important;
+
+    }
+
+    .description {
+      font-size: 12px !important;
+    }
+
+  }
+}
+
+/* 
 @media only screen and (max-width: 990px) {
   .testimonial {
     padding: 80px 0 80px 265px;
@@ -529,6 +555,7 @@ section:hover .section-title {
     content: "";
   }
 }
+*/
 
 /*--------------- Management2----------------*/
 
